# hicdash

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: examples.ipynb  tests.ipynb
src/hicdash/: __main__.py  constants.py  definitions.py  generator.py  plotters.py  readers.py  utilities.py
src/hicdash/templates/: call.html  comparison_plot.html  new_template.jinja  report.html  report.jinja  result.jinja
src/tests/: test_definitions.py  test_plotters.ipynb
