[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hicdash"
version = "0.0.3.1"
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "hic-straw",
  "pyensembl",
  "pyBigWig",
  "Jinja2",
]
requires-python = ">= 3.10"
authors = [
  {name = "Jamin Wu", email = "jw8710@nyu.edu"},
]
description = "Generate a visual dashboard of structural variants from Hi-C data."
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
]
